Minor fixes, added pathway-viewer to report. Removed dropdown.css, created context.css.

--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -200,7 +200,7 @@
                     <input id="searchInput" class="stv" type="text" style="width:100%;" placeholder="Search by name..." value="{{searchBy::input}}">
                 </div>
             </div>
-            <div hidden$="{{!checkFileModeOk(mode,selectedFile)}}" class="stv-btn stv-btn-shdw" style="width:100px;" on-click="handleFileModeOk">
+            <div hidden$="{{!checkFileModeOk(mode,selectedFile)}}" class="stv-btn stv-btn-shdw" style="width:100px;margin-left:5px;" on-click="handleFileModeOk">
                 OK
             </div>
         </div>
