--- a/src/file/stv-folder-list.html
+++ b/src/file/stv-folder-list.html
@@ -164,6 +164,9 @@
                 <div class="stv-btn stv-btn-shdw" hidden$="{{checkSelectedJob(selected)}}" on-click="handleViewJob" title="View job results">
                     <i class="fa fa-gears"></i>
                 </div>
+                <!-- <div class="stv-btn stv-btn-shdw" hidden$="{{checkSelected(selected)}}" on-click="handleRename" title="Rename file">
+                    <i class="fa fa-edit"></i>
+                </div> -->
             </div>
             <div class="horizontal layout">
                 <div class="stv-btn stv-btn-shdw" on-click="handleViewInfo" style="margin-right: 5px;" hidden$="{{checkSelected(selected)}}" title="Show info ">
